[package]
name = "fgtw"
version = "0.0.0"
edition = "2021"
authors = ["Nick Spiker <fractaldecoder@proton.me>"]
description = "Fractal Gradient Trust Web — the client substrate for TOKEN identity: fleet membership, per-member fan-out of scoped keys, fleet-shared state, and the FGTW protocol. Shared by every TOKEN app (photon, calendar, …) and the FGTW worker."
license = "MIT OR Apache-2.0"
repository = "https://github.com/nickspiker/fgtw"
readme = "README.md"
keywords = ["identity", "fleet", "trust", "decentralized", "token"]
categories = ["cryptography", "authentication"]

# 0.0.0 is a name-reservation + architecture scaffold.
# Modules are stubs; code migrates in from photon/src/network/fgtw/ per MIGRATION.md, published-dep-by-published-dep.
# Deliberately dependency-free at 0.0.0 so it publishes clean today; real deps (vsf, blake3, ed25519-dalek, …) land as each module's code moves in and its deps are themselves published.

[lib]
crate-type = ["rlib"]

[features]
# The no_std core (fleet fold/verify, fan-out crypto, protocol codec) is what the WASM worker and every client share.
# `client` adds the std HTTP oracle (fetch-then-sign, announce, publish) that only real clients need — the worker never enables it.
default = ["client"]
client = []

[dependencies]
